common/yak/antlr4nasl/parser/nasl_parser.go
// Code generated from ./NaslParser.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // NaslParser

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/yaklang/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type NaslParser struct {
	*antlr.BaseParser
}

var NaslParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func naslparserParserInit() {
	staticData := &NaslParserParserStaticData
	staticData.LiteralNames = []string{
		"", "", "'['", "']'", "'('", "')'", "'{'", "'}'", "';'", "','", "'='",
		"':'", "'.'", "'++'", "'--'", "'+'", "'-'", "'~'", "'&'", "'^'", "'|'",
		"'>>'", "'<<'", "'<<<'", "'>>>'", "'!'", "'*'", "'**'", "'/'", "'%'",
		"'<'", "'>'", "'<='", "'>='", "'=='", "'=~'", "'!='", "'!~'", "'>!<'",
		"'><'", "'&&'", "'||'", "'*='", "'/='", "'%='", "'+='", "'-='", "'x'",
		"'>>>='", "'<<<='", "'>>='", "'<<='", "'break'", "'var'", "'local_var'",
		"'global_var'", "'else'", "'return'", "'continue'", "'for'", "'foreach'",
		"'if'", "'function'", "'repeat'", "'while'", "'until'", "", "", "",
		"", "", "", "'NULL'",
	}
	staticData.SymbolicNames = []string{
		"", "SingleLineComment", "OpenBracket", "CloseBracket", "OpenParen",
		"CloseParen", "OpenBrace", "CloseBrace", "SemiColon", "Comma", "Assign",
		"Colon", "Dot", "PlusPlus", "MinusMinus", "Plus", "Minus", "BitNot",
		"BitAnd", "BitXOr", "BitOr", "RightShiftArithmetic", "LeftShiftArithmetic",
		"LeftShiftLogical", "RightShiftLogical", "Not", "Multiply", "Pow", "Divide",
		"Modulus", "LessThan", "MoreThan", "LessThanEquals", "GreaterThanEquals",
		"Equals_", "EqualsRe", "NotEquals", "NotLong", "MTNotLT", "MTLT", "And",
		"Or", "MultiplyAssign", "DivideAssign", "ModulusAssign", "PlusAssign",
		"MinusAssign", "X", "RightShiftLogicalAssign", "LeftShiftLogicalAssign",
		"RightShiftArithmeticAssign", "LeftShiftArithmeticAssign", "Break",
		"Var", "LocalVar", "GlobalVar", "Else", "Return", "Continue", "For",
		"ForEach", "If", "Function_", "Repeat", "While", "Until", "StringLiteral",
		"BooleanLiteral", "IntegerLiteral", "FloatLiteral", "IpLiteral", "HexLiteral",
		"NULLLiteral", "Identifier", "WhiteSpaces", "LineTerminator",
	}
	staticData.RuleNames = []string{
		"program", "statementList", "statement", "block", "variableDeclarationStatement",
		"variableAssignStatement", "expressionStatement", "ifStatement", "iterationStatement",
		"continueStatement", "breakStatement", "returnStatement", "argumentList",
		"argument", "expressionSequence", "functionDeclarationStatement", "parameterList",
		"arrayLiteral", "elementList", "arrayElement", "singleExpression", "literal",
		"numericLiteral", "identifier", "assignmentOperator", "eos",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// NaslParserInit initializes any static state used to implement NaslParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewNaslParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func NaslParserInit() {
	staticData := &NaslParserParserStaticData
	staticData.once.Do(naslparserParserInit)
}

// NewNaslParser produces a new parser instance for the optional input antlr.TokenStream.
func NewNaslParser(input antlr.TokenStream) *NaslParser {
	NaslParserInit()
	this := new(NaslParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &NaslParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "NaslParser.g4"

	return this
}

// NaslParser tokens.
const (
	NaslParserEOF                        = antlr.TokenEOF
	NaslParserSingleLineComment          = 1
	NaslParserOpenBracket                = 2
	NaslParserCloseBracket               = 3
	NaslParserOpenParen                  = 4
	NaslParserCloseParen                 = 5
	NaslParserOpenBrace                  = 6
	NaslParserCloseBrace                 = 7
	NaslParserSemiColon                  = 8
	NaslParserComma                      = 9
	NaslParserAssign                     = 10
	NaslParserColon                      = 11
	NaslParserDot                        = 12
	NaslParserPlusPlus                   = 13
	NaslParserMinusMinus                 = 14
	NaslParserPlus                       = 15
	NaslParserMinus                      = 16
	NaslParserBitNot                     = 17
	NaslParserBitAnd                     = 18
	NaslParserBitXOr                     = 19
	NaslParserBitOr                      = 20
	NaslParserRightShiftArithmetic       = 21
	NaslParserLeftShiftArithmetic        = 22
	NaslParserLeftShiftLogical           = 23
	NaslParserRightShiftLogical          = 24
	NaslParserNot                        = 25
	NaslParserMultiply                   = 26
	NaslParserPow                        = 27
	NaslParserDivide                     = 28
	NaslParserModulus                    = 29
	NaslParserLessThan                   = 30
	NaslParserMoreThan                   = 31
	NaslParserLessThanEquals             = 32
	NaslParserGreaterThanEquals          = 33
	NaslParserEquals_                    = 34
	NaslParserEqualsRe                   = 35
	NaslParserNotEquals                  = 36
	NaslParserNotLong                    = 37
	NaslParserMTNotLT                    = 38
	NaslParserMTLT                       = 39
	NaslParserAnd                        = 40
	NaslParserOr                         = 41
	NaslParserMultiplyAssign             = 42
	NaslParserDivideAssign               = 43
	NaslParserModulusAssign              = 44
	NaslParserPlusAssign                 = 45
	NaslParserMinusAssign                = 46
	NaslParserX                          = 47
	NaslParserRightShiftLogicalAssign    = 48
	NaslParserLeftShiftLogicalAssign     = 49
	NaslParserRightShiftArithmeticAssign = 50
	NaslParserLeftShiftArithmeticAssign  = 51
	NaslParserBreak                      = 52
	NaslParserVar                        = 53
	NaslParserLocalVar                   = 54
	NaslParserGlobalVar                  = 55
	NaslParserElse                       = 56
	NaslParserReturn                     = 57
	NaslParserContinue                   = 58
	NaslParserFor                        = 59
	NaslParserForEach                    = 60
	NaslParserIf                         = 61
	NaslParserFunction_                  = 62
	NaslParserRepeat                     = 63
	NaslParserWhile                      = 64
	NaslParserUntil                      = 65
	NaslParserStringLiteral              = 66
	NaslParserBooleanLiteral             = 67
	NaslParserIntegerLiteral             = 68
	NaslParserFloatLiteral               = 69
	NaslParserIpLiteral                  = 70
	NaslParserHexLiteral                 = 71
	NaslParserNULLLiteral                = 72
	NaslParserIdentifier                 = 73
	NaslParserWhiteSpaces                = 74
	NaslParserLineTerminator             = 75
)

// NaslParser rules.
const (
	NaslParserRULE_program                      = 0
	NaslParserRULE_statementList                = 1
	NaslParserRULE_statement                    = 2
	NaslParserRULE_block                        = 3
	NaslParserRULE_variableDeclarationStatement = 4
	NaslParserRULE_variableAssignStatement      = 5
	NaslParserRULE_expressionStatement          = 6
	NaslParserRULE_ifStatement                  = 7
	NaslParserRULE_iterationStatement           = 8
	NaslParserRULE_continueStatement            = 9
	NaslParserRULE_breakStatement               = 10
	NaslParserRULE_returnStatement              = 11
	NaslParserRULE_argumentList                 = 12
	NaslParserRULE_argument                     = 13
	NaslParserRULE_expressionSequence           = 14
	NaslParserRULE_functionDeclarationStatement = 15
	NaslParserRULE_parameterList                = 16
	NaslParserRULE_arrayLiteral                 = 17
	NaslParserRULE_elementList                  = 18
	NaslParserRULE_arrayElement                 = 19
	NaslParserRULE_singleExpression             = 20
	NaslParserRULE_literal                      = 21
	NaslParserRULE_numericLiteral               = 22
	NaslParserRULE_identifier                   = 23
	NaslParserRULE_assignmentOperator           = 24
	NaslParserRULE_eos                          = 25
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	StatementList() IStatementListContext

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = NaslParserRULE_program
	return p
}

func InitEmptyProgramContext(p *ProgramContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = NaslParserRULE_program
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = NaslParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) EOF() antlr.TerminalNode {
	return s.GetToken(NaslParserEOF, 0)
}

func (s *ProgramContext) StatementList() IStatementListContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStatementListContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStatementListContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case NaslParserVisitor:
		return t.VisitProgram(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *NaslParser) Program() (localctx IProgramContext) {
	this := p
	_ = this

	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, NaslParserRULE_program)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(53)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if ((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&-76420456143134636) != 0) || ((int64((_la-64)) & ^0x3f) == 0 && ((int64(1)<<(_la-64))&1021) != 0) {
		{
			p.SetState(52)
			p.StatementList()
		}

	}
	{
		p.SetState(55)
		p.Match(NaslParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IStatementListContext is an interface to support dynamic dispatch.
type IStatementListContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllStatement() []IStatementContext
	Statement(i int) IStatementContext

	// IsStatementListContext differentiates from other interfaces.
	IsStatementListContext()
}

type StatementListContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementListContext() *StatementListContext {
	var p = new(StatementListContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = NaslParserRULE_statementList
	return p
}

func InitEmptyStatementListContext(p *StatementListContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = NaslParserRULE_statementList
}

func (*StatementListContext) IsStatementListContext() {}

func NewStatementListContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementListContext {
	var p = new(StatementListContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = NaslParserRULE_statementList

	return p
}

func (s *StatementListContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementListContext) AllStatement() []IStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IStatementContext); ok {
			len++
		}
	}

	tst := make([]IStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IStatementContext); ok {
			tst[i] = t.(IStatementContext)
			i++
		}
	}

	return tst
}

func (s *StatementListContext) Statement(i int) IStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStatementContext)
}

func (s *StatementListContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementListContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatementListContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case NaslParserVisitor:
		return t.VisitStatementList(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *NaslParser) StatementList() (localctx IStatementListContext) {
	this := p
	_ = this

	localctx = NewStatementListContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, NaslParserRULE_statementList)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(58)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = ((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&-76420456143134636) != 0) || ((int64((_la-64)) & ^0x3f) == 0 && ((int64(1)<<(_la-64))&1021) != 0) {
		{
			p.SetState(57)
			p.Statement()
		}

		p.SetState(60)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IStatementContext is an interface to support dynamic dispatch.
type IStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Block() IBlockContext
	IfStatement() IIfStatementContext
	IterationStatement() IIterationStatementContext
	ContinueStatement() IContinueStatementContext
	Eos() IEosContext
	BreakStatement() IBreakStatementContext
	ReturnStatement() IReturnStatementContext
	ExpressionStatement() IExpressionStatementContext
	VariableDeclarationStatement() IVariableDeclarationStatementContext
	VariableAssignStatement() IVariableAssignStatementContext
	FunctionDeclarationStatement() IFunctionDeclarationStatementContext

	// IsStatementContext differentiates from other interfaces.
	IsStatementContext()
}

type StatementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementContext() *StatementContext {
	var p = new(StatementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = NaslParserRULE_statement
	return p
}

func InitEmptyStatementContext(p *StatementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = NaslParserRULE_statement
}

func (*StatementContext) IsStatementContext() {}

func NewStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementContext {
	var p = new(StatementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = NaslParserRULE_statement

	return p
}

func (s *StatementContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementContext) Block() IBlockContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBlockContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBlockContext)
}

func (s *StatementContext) IfStatement() IIfStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IIfStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IIfStatementContext)
}

func (s *StatementContext) IterationStatement() IIterationStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IIterationStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IIterationStatementContext)
}

func (s *StatementContext) ContinueStatement() IContinueStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IContinueStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IContinueStatementContext)
}

func (s *StatementContext) Eos() IEosContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IEosContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IEosContext)
}

func (s *StatementContext) BreakStatement() IBreakStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBreakStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBreakStatementContext)
}

func (s *StatementContext) ReturnStatement() IReturnStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IReturnStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IReturnStatementContext)
}

func (s *StatementContext) ExpressionStatement() IExpressionStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExpressionStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExpressionStatementContext)
}

func (s *StatementContext) VariableDeclarationStatement() IVariableDeclarationStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IVariableDeclarationStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IVariableDeclarationStatementContext)
}

func (s *StatementContext) VariableAssignStatement() IVariableAssignStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IVariableAssignStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IVariableAssignStatementContext)
}

func (s *StatementContext) FunctionDeclarationStatement() IFunctionDeclarationStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFunctionDeclarationStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFunctionDeclarationStatementContext)
}

func (s *StatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case NaslParserVisitor:
		return t.VisitStatement(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *NaslParser) Statement() (localctx IStatementContext) {
	this := p
	_ = this

	localctx = NewStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, NaslParserRULE_statement)
	p.SetState(84)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 2, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(62)
			p.Block()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(63)
			p.IfStatement()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(64)
			p.IterationStatement()
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(65)
			p.ContinueStatement()
		}
		{
			p.SetState(66)
			p.Eos()
		}

	case 5:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(68)
			p.BreakStatement()
		}
		{
			p.SetState(69)
			p.Eos()
		}

	case 6:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(71)
			p.ReturnStatement()
		}
		{
			p.SetState(72)
			p.Eos()
		}

	case 7:
		p.EnterOuterAlt(localctx, 7)
		{
			p.SetState(74)
			p.ExpressionStatement()
		}
		{
			p.SetState(75)
			p.Eos()
		}

	case 8:
		p.EnterOuterAlt(localctx, 8)
		{
			p.SetState(77)
			p.VariableDeclarationStatement()
		}
		{
			p.SetState(78)
			p.Eos()
		}

	case 9:
		p.EnterOuterAlt(localctx, 9)
		{
			p.SetState(80)
			p.VariableAssignStatement()
		}
		{
			p.SetState(81)
			p.Eos()
		}

	case 10:
		p.EnterOuterAlt(localctx, 10)
		{
			p.SetState(83)
			p.FunctionDeclarationStatement()
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IBlockContext is an interface to support dynamic dispatch.
type IBlockContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	OpenBrace() antlr.TerminalNode
	CloseBrace() antlr.TerminalNode
	Eos() IEosContext
	StatementList() IStatementListContext

	// IsBlockContext differentiates from other interfaces.
	IsBlockContext()
}

type BlockContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBlockContext() *BlockContext {
	var p = new(BlockContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = NaslParserRULE_block
	return p
}

func InitEmptyBlockContext(p *BlockContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = NaslParserRULE_block
}

func (*BlockContext) IsBlockContext() {}

func NewBlockContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BlockContext {
	var p = new(BlockContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = NaslParserRULE_block

	return p
}

func (s *BlockContext) GetParser() antlr.Parser { return s.parser }

func (s *BlockContext) OpenBrace() antlr.TerminalNode {
	return s.GetToken(NaslParserOpenBrace, 0)
}

func (s *BlockContext) CloseBrace() antlr.TerminalNode {
	return s.GetToken(NaslParserCloseBrace, 0)
}

func (s *BlockContext) Eos() IEosContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IEosContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IEosContext)
}

func (s *BlockContext) StatementList() IStatementListContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStatementListContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStatementListContext)
}

func (s *BlockContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BlockContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *BlockContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case NaslParserVisitor:
		return t.VisitBlock(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *NaslParser) Block() (localctx IBlockContext) {
	this := p
	_ = this

	localctx = NewBlockContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, NaslParserRULE_block)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(86)
		p.Match(NaslParserOpenBrace)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(88)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == NaslParserSemiColon {
		{
			p.SetState(87)
			p.Eos()
		}

	}
	p.SetState(91)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if ((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&-76420456143134636) != 0) || ((int64((_la-64)) & ^0x3f) == 0 && ((int64(1)<<(_la-64))&1021) != 0) {
		{
			p.SetState(90)
			p.StatementList()
		}

	}
	{
		p.SetState(93)
		p.Match(NaslParserCloseBrace)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IVariableDeclarationStatementContext is an interface to support dynamic dispatch.
type IVariableDeclarationStatementContext interface {
	antlr.ParserRuleContext
